added eslint prettier config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "wesbos"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/jsx-props-no-spreading": "off"
+  }
 }
